// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple 1`] = `
Object {
  "messages": Array [
    Object {
      "attributes": Set {},
      "id": "hello",
      "placeholders": Array [],
      "raw": "hello = world",
    },
  ],
  "path": "app.ftl",
  "raw": "hello = world
",
  "resource": Resource {
    "body": Array [
      Message {
        "attributes": Array [],
        "comment": null,
        "id": Identifier {
          "name": "hello",
          "span": Span {
            "end": 5,
            "start": 0,
            "type": "Span",
          },
          "type": "Identifier",
        },
        "span": Span {
          "end": 13,
          "start": 0,
          "type": "Span",
        },
        "type": "Message",
        "value": Pattern {
          "elements": Array [
            TextElement {
              "span": Span {
                "end": 13,
                "start": 8,
                "type": "Span",
              },
              "type": "TextElement",
              "value": "world",
            },
          ],
          "span": Span {
            "end": 13,
            "start": 8,
            "type": "Span",
          },
          "type": "Pattern",
        },
      },
    ],
    "span": Span {
      "end": 14,
      "start": 0,
      "type": "Span",
    },
    "type": "Resource",
  },
}
`;

exports[`simple 2`] = `
Object {
  "calls": Array [
    Array [
      "Localization/App.elm",
      "module Localization.App exposing (hello, name_)

{-| File auto-generated by \`@erosson/fluent-typesafe\`. Do not edit!
-}

import Html as H
import Html.Attributes as A


name_ : String -> H.Attribute msg
name_ =
    A.attribute \\"data-l10n-name\\"


{-| Fluent message id \`hello\`, in file \`app.ftl\`

    hello =
        world

-}
hello : H.Attribute msg
hello =
    A.attribute \\"data-l10n-id\\" \\"hello\\"
",
    ],
    Array [
      "Localization.elm",
      "module Localization exposing (app)

{-| File auto-generated by \`@erosson/fluent-typesafe\`. Do not edit!
-}

import Localization.App


app =
    { hello = Localization.App.hello
    }
",
    ],
  ],
  "label": "elm",
}
`;

exports[`simple 3`] = `
Object {
  "calls": Array [
    Array [
      "localization/app.tsx",
      "/** File auto-generated by \`@erosson/fluent-typesafe\`. Do not edit! */

// eslint-disable-next-line @typescript-eslint/no-unused-vars
import __React from \\"react\\";
import * as __L from \\"@fluent/react\\";

// https://github.com/projectfluent/fluent.js/blob/master/fluent-react/src/localized.ts
type __props = Omit<__L.LocalizedProps, \\"id\\" | \\"vars\\" | \\"attrs\\">;

/** Fluent message id \`hello\`, in file \`app.ftl\`

\`\`\`
hello = world
\`\`\`

*/

export function Hello(props: __props): JSX.Element {
  return <__L.Localized id=\\"hello\\" {...props} />;
}
",
    ],
    Array [
      "localization.ts",
      "/** File auto-generated by \`@erosson/fluent-typesafe\`. Do not edit! */

import * as localizationApp from \\"./localization/app\\";

export const app = localizationApp;
",
    ],
  ],
  "label": "react",
}
`;

exports[`simple 4`] = `
Object {
  "calls": Array [
    Array [
      "localization/app.ts",
      "/** File auto-generated by \`@erosson/fluent-typesafe\`. Do not edit! */

export function name_(name: string): { \\"data-l10n-name\\": string } {
  return { \\"data-l10n-name\\": name };
}

/** Fluent message id \`hello\`, in file \`app.ftl\`

\`\`\`
hello = world
\`\`\`

*/

export const hello: { \\"data-l10n-id\\": string } = { \\"data-l10n-id\\": \\"hello\\" };
",
    ],
    Array [
      "localization.ts",
      "/** File auto-generated by \`@erosson/fluent-typesafe\`. Do not edit! */

import * as localizationApp from \\"./localization/app\\";

export const app = localizationApp;
",
    ],
  ],
  "label": "react-dom",
}
`;
